--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/webjars/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Sign In</title>
+    <title>Jinhyun's world! located in Template</title>
   </head>
   <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -49,29 +49,8 @@
 	    </form>
 	  </div>
 	</nav>
-    <h1>Sign In</h1>
-    <div class = "container">
-	<form action = "/create">
-	  <div class="form-group">
-	    <label for="userId">User ID</label>
-	    <input type="text" class="form-control" name="userId" placeholder = "Input here your ID">
-	  </div>
-	  <div class="form-group">
-	    <label for="password">Password</label>
-	    <input type="password" class="form-control" name="password" placeholder = "Input here your Password">
-	  </div>
-	  <div class="form-group">
-	    <label for="name">Name</label>
-	    <input type="text" class="form-control" name="name" placeholder = "Input here your Name">
-	  </div>
-	  <div class="form-group">
-	    <label for="email">Email</label>
-	    <input type="email" class="form-control" name="email" placeholder = "Input here your Email" aria-describedby="emailHelp">
-	    <small id="emailHelp" class="form-text text-muted">We'll never share your Email Address with anyone else.</small>
-	  </div>
-	  <button type="submit" class="btn btn-primary">Submit</button>
-	</form>
-	</div>
+    <h1>Welcome To Jin QnA!</h1>
+    <img src="images/greentea.jpg" class="img-fluid" alt="greentea image">
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="/webjars/jquery/3.4.1/jquery.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
