--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -54,31 +54,19 @@
 	<table class="table">
 	  <thead class="thead-dark">
 	    <tr>
-	      <th scope="col">#</th>
 	      <th scope="col">User ID</th>
 	      <th scope="col">Name</th>
 	      <th scope="col">Email</th>
 	    </tr>
 	  </thead>
 	  <tbody>
+	  {{#users}}
 	    <tr>
-	      <th scope="row">1</th>
-	      <td>Mark</td>
-	      <td>Otto</td>
-	      <td>@mdo</td>
+	      <td>{{userId}}</td>
+	      <td>{{name}}</td>
+	      <td>{{email}}</td>
 	    </tr>
-	    <tr>
-	      <th scope="row">2</th>
-	      <td>Jacob</td>
-	      <td>Thornton</td>
-	      <td>@fat</td>
-	    </tr>
-	    <tr>
-	      <th scope="row">3</th>
-	      <td>Larry</td>
-	      <td>the Bird</td>
-	      <td>@twitter</td>
-	    </tr>
+	  {{/users}}
 	  </tbody>
 	</table>
 	</div>
