--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<meta charset="utf-8">
-		<title>SLiPP Java Web Programming</title>
+		<title>JINHYUN Java Web Programming</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<!--[if lt IE 9]>
@@ -23,16 +23,16 @@
                   <div class="wrap">
                       <div class="main">
                           <strong class="subject">
-                              <a href="./qna/show.html">국내에서 Ruby on Rails와 Play가 활성화되기 힘든 이유는 뭘까?</a>
+                              <a href="./qna/show.html">SpringBoot 천재</a>
                           </strong>
                           <div class="auth-info">
                               <i class="icon-add-comment"></i>
-                              <span class="time">2016-01-15 18:47</span>
-                              <a href="./user/profile.html" class="author">자바지기</a>
+                              <span class="time">2020-01-01 14:47</span>
+                              <a href="./user/profile.html" class="author">남진현</a>
                           </div>
                           <div class="reply" title="댓글">
                               <i class="icon-reply"></i>
-                              <span class="point">8</span>
+                              <span class="point">11</span>
                           </div>
                       </div>
                   </div>
@@ -41,12 +41,12 @@
                   <div class="wrap">
                       <div class="main">
                           <strong class="subject">
-                              <a href="./qna/show.html">runtime 에 reflect 발동 주체 객체가 뭔지 알 방법이 있을까요?</a>
+                              <a href="./qna/show.html">BootStrap의 효용성이란</a>
                           </strong>
                           <div class="auth-info">
                               <i class="icon-add-comment"></i>
-                              <span class="time">2016-01-05 18:47</span>
-                              <a href="./user/profile.html" class="author">김문수</a>
+                              <span class="time">2020-01-01 18:47</span>
+                              <a href="./user/profile.html" class="author">남진현</a>
                           </div>
                           <div class="reply" title="댓글">
                               <i class="icon-reply"></i>
