--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -16,30 +16,27 @@
 	{{> /include/navigation}}
 
 	<div class="container" id="main">
-		<div class="col-md-10 col-md-offset-1">
+		<div class="col-md-6 col-md-offset-3">
 			<div class="panel panel-default">
-				<table class="table table-hover">
-					<thead>
-						<tr>
-							<th>#</th>
-							<th>사용자 아이디</th>
-							<th>이름</th>
-							<th>이메일</th>
-							<th></th>
-						</tr>
-					</thead>
-					<tbody>
-						{{#users}}
-						<tr>
-							<th scope="row">{{id}}</th>
-							<td>{{userId}}</td>
-							<td>{{name}}</td>
-							<td>{{email}}</td>
-							<td><a href="#" class="btn btn-success" role="button">수정</a></td>
-						</tr>
-						{{/users}}
-					</tbody>
-				</table>
+				<div class="panel-heading">
+					<h4>Profiles</h4>
+				</div>
+				<div class="panel-body">
+					<div class="well well-sm">
+						<div class="media">
+							<a class="thumbnail pull-left" href="#"> <img
+								class="media-object" src="../images/80-text.png">
+							</a>
+							<div class="media-body">
+								<h4 class="media-heading">JINHYUN NAM</h4>
+								<p>
+									<a href="#" class="btn btn-xs btn-default"><span
+										class="glyphicon glyphicon-envelope"></span>&nbsp;nice0001@gmail.com</a>
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
