--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="kr">
-<head>
-	{{> /include/header}}
+<head>{{> /include/header}}
 </head>
 <body>
 	{{> /include/navigation}}
@@ -9,19 +8,31 @@
 	<div class="container" id="main">
 		<div class="col-md-6 col-md-offset-3">
 			<div class="panel panel-default content-main">
-				<form name="question" method="post" action="/user/login">
+				{{#user}}
+				<form name="question" method="post" action="/users">
 					<div class="form-group">
 						<label for="userId">사용자 아이디</label> <input class="form-control"
-							id="userId" name="userId" placeholder="User ID">
+							id="userId" name="userId" placeholder="User ID"
+							value="{{userId}}">
 					</div>
 					<div class="form-group">
 						<label for="password">비밀번호</label> <input type="password"
 							class="form-control" id="password" name="password"
 							placeholder="Password">
 					</div>
-					<button type="submit" class="btn btn-success clearfix pull-right">로그인</button>
+					<div class="form-group">
+						<label for="name">이름</label> <input class="form-control" id="name"
+							name="name" placeholder="Name" value="{{name}}">
+					</div>
+					<div class="form-group">
+						<label for="email">이메일</label> <input type="email"
+							class="form-control" id="email" name="email" placeholder="Email"
+							value="{{email}}">
+					</div>
+					<button type="submit" class="btn btn-success clearfix pull-right">회원정보수정</button>
 					<div class="clearfix" />
 				</form>
+				{{/user}}
 			</div>
 		</div>
 	</div>
