--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-	{{> /include/header}}
+	{{> include/header}}
 </head>
 
 <body>
-	{{> /include/navigation}}
+	{{> include/navigation}}
 
 	<div class="container" id="main">
 		<div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
