--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-	{{> /include/header}}
+	{{> include/header}}
 </head>
 <body>
-	{{> /include/navigation}}
+	{{> include/navigation}}
 
 	<div class="container" id="main">
 		<div class="col-md-10 col-md-offset-1">
