--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="kr">
-<head>{{> /include/header}}
+<head>{{> include/header}}
 </head>
 <body>
-	{{> /include/navigation}}
+	{{> include/navigation}}
 
 	<div class="container" id="main">
 		<div class="col-md-6 col-md-offset-3">
