--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="kr">
-<head>
-	{{> include/header}}
+<head>{{> include/header}}
 </head>
 
 <body>
@@ -15,11 +14,12 @@
 						<div class="wrap">
 							<div class="main">
 								<strong class="subject"> <a href="./qna/show.html">SpringBoot
-										천재</a>
+										Genious</a>
 								</strong>
 								<div class="auth-info">
 									<i class="icon-add-comment"></i> <span class="time">2020-01-01
-										14:47</span> <a href="./user/profile.html" class="author">남진현</a>
+										14:47</span> <a href="./user/profile.html" class="author">JINHYUN
+										NAM</a>
 								</div>
 								<div class="reply" title="댓글">
 									<i class="icon-reply"></i> <span class="point">11</span>
@@ -30,12 +30,13 @@
 					<li>
 						<div class="wrap">
 							<div class="main">
-								<strong class="subject"> <a href="./qna/show.html">BootStrap의
-										효용성이란</a>
+								<strong class="subject"> <a href="./qna/show.html">BootStrap's
+										Future? </a>
 								</strong>
 								<div class="auth-info">
 									<i class="icon-add-comment"></i> <span class="time">2020-01-01
-										18:47</span> <a href="./user/profile.html" class="author">남진현</a>
+										18:47</span> <a href="./user/profile.html" class="author">JINHYUN
+										NAM</a>
 								</div>
 								<div class="reply" title="댓글">
 									<i class="icon-reply"></i> <span class="point">12</span>
@@ -59,7 +60,7 @@
 					</div>
 					<div class="col-md-3 qna-write">
 						<a href="./qna/form.html" class="btn btn-primary pull-right"
-							role="button">질문하기</a>
+							role="button">Question</a>
 					</div>
 				</div>
 			</div>
@@ -143,9 +144,6 @@
 </div>
 -->
 
-	<!-- script references -->
-	<script src="js/jquery-2.2.0.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/scripts.js"></script>
+	{{> include/footer}}
 </body>
 </html>
