--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -52,10 +52,10 @@
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="/">Posts</a></li>
-                <li><a href="/users/login" role="button">로그인</a></li>
-                <li><a href="/users/form" role="button">회원가입</a></li>
-                <li><a href="#" role="button">로그아웃</a></li>
-                <li><a href="#" role="button">개인정보수정</a></li>
+                <li><a href="/users/loginForm" role="button">Log In</a></li>
+                <li><a href="/users/form" role="button">Sign Up</a></li>
+                <li><a href="#" role="button">Log Out</a></li>
+                <li><a href="#" role="button">Information Update</a></li>
             </ul>
         </div>
     </div>
