--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="kr">
-<head>
-	{{> include/header}}
+<head>{{> include/header}}
 </head>
 <body>
 	{{> include/navigation}}
@@ -11,24 +10,21 @@
 			<div class="panel panel-default content-main">
 				<form name="question" method="post" action="/user/login">
 					<div class="form-group">
-						<label for="userId">사용자 아이디</label> <input class="form-control"
+						<label for="userId">User ID</label> <input class="form-control"
 							id="userId" name="userId" placeholder="User ID">
 					</div>
 					<div class="form-group">
-						<label for="password">비밀번호</label> <input type="password"
+						<label for="password">Password</label> <input type="password"
 							class="form-control" id="password" name="password"
 							placeholder="Password">
 					</div>
-					<button type="submit" class="btn btn-success clearfix pull-right">로그인</button>
+					<button type="submit" class="btn btn-success clearfix pull-right">Login</button>
 					<div class="clearfix" />
 				</form>
 			</div>
 		</div>
 	</div>
 
-	<!-- script references -->
-	<script src="../js/jquery-2.2.0.min.js"></script>
-	<script src="../js/bootstrap.min.js"></script>
-	<script src="../js/scripts.js"></script>
+	{{> include/footer}}
 </body>
 </html>
