--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -11,25 +11,26 @@
 				{{#user}}
 				<form name="question" method="post" action="/users/{{id}}">
 					<div class="form-group">
-						<label for="userId">사용자 아이디</label> <input class="form-control"
+						<label for="userId">User ID</label> <input class="form-control"
 							id="userId" name="userId" placeholder="User ID"
 							value="{{userId}}">
 					</div>
 					<div class="form-group">
-						<label for="password">비밀번호</label> <input type="password"
+						<label for="password">Password</label> <input type="password"
 							class="form-control" id="password" name="password"
 							placeholder="Password">
 					</div>
 					<div class="form-group">
-						<label for="name">이름</label> <input class="form-control" id="name"
-							name="name" placeholder="Name" value="{{name}}">
+						<label for="name">Name</label> <input class="form-control"
+							id="name" name="name" placeholder="Name" value="{{name}}">
 					</div>
 					<div class="form-group">
-						<label for="email">이메일</label> <input type="email"
+						<label for="email">Email</label> <input type="email"
 							class="form-control" id="email" name="email" placeholder="Email"
 							value="{{email}}">
 					</div>
-					<button type="submit" class="btn btn-success clearfix pull-right">회원정보수정</button>
+					<button type="submit" class="btn btn-success clearfix pull-right">Informaiton
+						Update</button>
 					<div class="clearfix" />
 				</form>
 				{{/user}}
@@ -37,9 +38,6 @@
 		</div>
 	</div>
 
-	<!-- script references -->
-	<script src="../js/jquery-2.2.0.min.js"></script>
-	<script src="../js/bootstrap.min.js"></script>
-	<script src="../js/scripts.js"></script>
+	{{> include/footer}}
 </body>
 </html>
