--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -29,7 +29,7 @@
 							class="form-control" id="email" name="email" placeholder="Email"
 							value="{{email}}">
 					</div>
-					<button type="submit" class="btn btn-success clearfix pull-right">Informaiton
+					<button type="submit" class="btn btn-success clearfix pull-right">Information
 						Update</button>
 					<div class="clearfix" />
 				</form>
