--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -26,7 +26,7 @@
 							<td>{{name}}</td>
 							<td>{{email}}</td>
 							<td><a href="users/{{id}}/form" class="btn btn-success"
-								role="button">수정</a></td>
+								role="button">Update</a></td>
 						</tr>
 						{{/users}}
 					</tbody>
