--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -52,10 +52,14 @@
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="/">Posts</a></li>
+                {{^user}}
                 <li><a href="/users/loginForm" role="button">Log In</a></li>
                 <li><a href="/users/form" role="button">Sign Up</a></li>
+                {{/user}}
+                {{#user}}
                 <li><a href="#" role="button">Log Out</a></li>
                 <li><a href="#" role="button">Information Update</a></li>
+                {{/user}}
             </ul>
         </div>
     </div>
