--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -57,7 +57,7 @@
                 <li><a href="/users/form" role="button">Sign Up</a></li>
                 {{/user}}
                 {{#user}}
-                <li><a href="#" role="button">Log Out</a></li>
+                <li><a href="/users/logout" role="button">Log Out</a></li>
                 <li><a href="#" role="button">Information Update</a></li>
                 {{/user}}
             </ul>
