--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -59,7 +59,7 @@
 						</ul>
 					</div>
 					<div class="col-md-3 qna-write">
-						<a href="./qna/form.html" class="btn btn-primary pull-right"
+						<a href="/questions/form" class="btn btn-primary pull-right"
 							role="button">Question</a>
 					</div>
 				</div>
