--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
 								<strong class="subject"> <a href="">{{title}}</a>
 								</strong>
 								<div class="auth-info">
-									<i class="icon-add-comment"></i> <span class="time">2020-01-01 14:47</span> 
+									<i class="icon-add-comment"></i> <span class="time">{{formattedCreateDate}}</span> 
 									<a href="./user/profile.html" class="author">{{writer.userId}}</a>
 								</div>
 								<div class="reply" title="reply">
