--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 					<li>
 						<div class="wrap">
 							<div class="main">
-								<strong class="subject"> <a href="">{{title}}</a>
+								<strong class="subject"> <a href="/questions/{{id}}">{{title}}</a>
 								</strong>
 								<div class="auth-info">
 									<i class="icon-add-comment"></i> <span class="time">{{formattedCreateDate}}</span> 
