mustache {{title}} add on

--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -10,7 +10,7 @@
 			{{#question}}
 			<div class="panel panel-default">
 				<header class="qna-header">
-					<h2 class="qna-title">~~~</h2>
+					<h2 class="qna-title">{{title}}</h2>
 				</header>
 				<div class="content-main">
 					<article class="article">
