--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -32,15 +32,15 @@
 							<div class="article-util">
 								<ul class="article-util-list">
 									<li><a class="link-modify-article"
-										href="/questions/423/form">수정</a></li>
+										href="/questions/{{id}}/form">Update</a></li>
 									<li>
 										<form class="form-delete" action="/questions/423"
 											method="POST">
 											<input type="hidden" name="_method" value="DELETE">
-											<button class="link-delete-article" type="submit">삭제</button>
+											<button class="link-delete-article" type="submit">Delete</button>
 										</form>
 									</li>
-									<li><a class="link-modify-article" href="/index.html">목록</a>
+									<li><a class="link-modify-article" href="/">List</a>
 									</li>
 								</ul>
 							</div>
