updateform.html add and coding

--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -40,7 +40,7 @@
 											<button class="link-delete-article" type="submit">Delete</button>
 										</form>
 									</li>
-									<li><a class="link-modify-article" href="/">List</a>
+									<li><a class="link-modify-article" href="/">Posts</a>
 									</li>
 								</ul>
 							</div>
