delete function add

--- a/src/main/resources/templates/qna/updateForm.html
+++ b/src/main/resources/templates/qna/updateForm.html
@@ -9,7 +9,7 @@
 		<div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
 			<div class="panel panel-default content-main">
 				{{#question}}
-				<form name="question" method="post" action="/questions/{{id}}">
+				<form name="question" method="post" action="/questions/{{id}}/update">
 					<div class="form-group">
 						<label for="title">Title</label> <input type="text"
 							class="form-control" id="title" name="title" value={{title}} placeholder="Title" />
