--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -34,9 +34,8 @@
 									<li><a class="link-modify-article"
 										href="/questions/{{id}}/form">Update</a></li>
 									<li>
-										<form class="form-delete" action="/questions/423"
+										<form class="form-delete" action="/questions/{{id}}/delete"
 											method="POST">
-											<input type="hidden" name="_method" value="DELETE">
 											<button class="link-delete-article" type="submit">Delete</button>
 										</form>
 									</li>
