--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -59,14 +59,13 @@
 												class="article-author-thumb" alt="">
 										</div>
 										<div class="article-header-text">
-											<a href="/users/1/자바지기" class="article-author-name">자바지기</a>
+											<a href="/users/1/nice0001" class="article-author-name">Jinhyun</a>
 											<a href="#answer-1434" class="article-header-time"
 												title="퍼머링크"> 2016-01-12 14:06 </a>
 										</div>
 									</div>
 									<div class="article-doc comment-doc">
-										<p>이 글만으로는 원인 파악하기 힘들겠다. 소스 코드와 설정을 단순화해서 공유해 주면 같이 디버깅해줄
-											수도 있겠다.</p>
+										<p>I got some mistake from yours</p>
 									</div>
 									<div class="article-util">
 										<ul class="article-util-list">
@@ -89,14 +88,13 @@
 												class="article-author-thumb" alt="">
 										</div>
 										<div class="article-header-text">
-											<a href="/users/1/자바지기" class="article-author-name">자바지기</a>
+											<a href="/users/1/nice0001" class="article-author-name">Jinhyun</a>
 											<a href="#answer-1434" class="article-header-time"
 												title="퍼머링크"> 2016-01-12 14:06 </a>
 										</div>
 									</div>
 									<div class="article-doc comment-doc">
-										<p>이 글만으로는 원인 파악하기 힘들겠다. 소스 코드와 설정을 단순화해서 공유해 주면 같이 디버깅해줄
-											수도 있겠다.</p>
+										<p>But you can touch this softly</p>
 									</div>
 									<div class="article-util">
 										<ul class="article-util-list">
