--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -51,7 +51,7 @@
 								<strong>2</strong>개의 의견
 							</p>
 							<div class="qna-comment-slipp-articles">
-
+								{{#answers}}
 								<article class="article" id="answer-1405">
 									<div class="article-header">
 										<div class="article-header-thumb">
@@ -59,13 +59,13 @@
 												class="article-author-thumb" alt="">
 										</div>
 										<div class="article-header-text">
-											<a href="/users/1/nice0001" class="article-author-name">Jinhyun</a>
+											<a href="/users/1/nice0001" class="article-author-name">{{writer.userId}}</a>
 											<a href="#answer-1434" class="article-header-time"
-												title="퍼머링크"> 2016-01-12 14:06 </a>
+												title="퍼머링크">{{formattedCreateDate}}</a>
 										</div>
 									</div>
 									<div class="article-doc comment-doc">
-										<p>I got some mistake from yours</p>
+										<p>{{contents}}</p>
 									</div>
 									<div class="article-util">
 										<ul class="article-util-list">
@@ -81,41 +81,13 @@
 										</ul>
 									</div>
 								</article>
-								<article class="article" id="answer-1406">
-									<div class="article-header">
-										<div class="article-header-thumb">
-											<img src="https://graph.facebook.com/v2.3/1324855987/picture"
-												class="article-author-thumb" alt="">
-										</div>
-										<div class="article-header-text">
-											<a href="/users/1/nice0001" class="article-author-name">Jinhyun</a>
-											<a href="#answer-1434" class="article-header-time"
-												title="퍼머링크"> 2016-01-12 14:06 </a>
-										</div>
-									</div>
-									<div class="article-doc comment-doc">
-										<p>But you can touch this softly</p>
-									</div>
-									<div class="article-util">
-										<ul class="article-util-list">
-											<li><a class="link-modify-article"
-												href="/questions/413/answers/1405/form">수정</a></li>
-											<li>
-												<form class="form-delete"
-													action="/questions/413/answers/1405" method="POST">
-													<input type="hidden" name="_method" value="DELETE">
-													<button type="submit" class="delete-answer-button">삭제</button>
-												</form>
-											</li>
-										</ul>
-									</div>
-								</article>
-								<form class="submit-write">
+								{{/answers}}
+								<form class="submit-write" method = "post" action = "/questions/{{id}}/answers">
 									<div class="form-group" style="padding: 14px;">
 										<textarea class="form-control"
-											placeholder="Update your status"></textarea>
+											placeholder="Update your status" name = "contents"></textarea>
 									</div>
-									<button class="btn btn-success pull-right" type="button">답변하기</button>
+									<input type ="submit" class="btn btn-success pull-right" value = "Reply"/>
 									<div class="clearfix" />
 								</form>
 							</div>
