refactoring with exception

--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -15,7 +15,7 @@
 					<div class="well well-sm">
 						<div class="media">
 							<a class="thumbnail pull-left" href="#"> <img
-								class="media-object" src="../images/80-text.png">
+								class="media-object" src="../images/myimage.png">
 							</a>
 							<div class="media-body">
 								<h4 class="media-heading">JINHYUN NAM</h4>
