--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -39,8 +39,7 @@
 											<button class="link-delete-article" type="submit">Delete</button>
 										</form>
 									</li>
-									<li><a class="link-modify-article" href="/">Posts</a>
-									</li>
+									<li><a class="link-modify-article" href="/">Posts</a></li>
 								</ul>
 							</div>
 					</article>
@@ -82,12 +81,14 @@
 									</div>
 								</article>
 								{{/answers}}
-								<form class="submit-write" method = "post" action = "/questions/{{id}}/answers">
+								<form class="submit-write" method="post"
+									action="/questions/{{id}}/answers">
 									<div class="form-group" style="padding: 14px;">
 										<textarea class="form-control"
-											placeholder="Update your status" name = "contents"></textarea>
+											placeholder="Update your status" name="contents"></textarea>
 									</div>
-									<input type ="submit" class="btn btn-success pull-right" value = "Reply"/>
+									<input type="submit" class="btn btn-success pull-right"
+										value="Reply" />
 									<div class="clearfix" />
 								</form>
 							</div>
