--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
 								</strong>
 								<div class="auth-info">
 									<i class="icon-add-comment"></i> <span class="time">{{formattedCreateDate}}</span> 
-									<a href="./user/profile.html" class="author">{{writer.userId}}</a>
+									<a href="./user/profile.html" class="author">~~~</a>
 								</div>
 								<div class="reply" title="reply">
 									<i class="icon-reply"></i> <span class="point">1</span>
