--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -101,6 +101,7 @@
 		</div>
 	</div>
 
+
 	<script type="text/template" id="answerTemplate">
 	<article class="article">
 		<div class="article-header">
@@ -123,7 +124,7 @@
 			<li>
 				<form class="delete-answer-form" action="/api/questions/{3}/answers/{4}" method="POST">
 					<input type="hidden" name="_method" value="DELETE">
-                     <button type="submit" class="delete-answer-button">삭제</button>
+                     <button type="submit" class="delete-answer-button">삭제/button>
 				</form>
 			</li>
 		</ul>
