--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -48,7 +48,7 @@
 					<div class="qna-comment">
 						<div class="qna-comment-slipp">
 							<p class="qna-comment-count">
-								<strong>2</strong>개의 의견
+								<strong>2</strong> comment(s)
 							</p>
 							<div class="qna-comment-slipp-articles">
 								{{#answers}}
@@ -70,12 +70,12 @@
 									<div class="article-util">
 										<ul class="article-util-list">
 											<li><a class="link-modify-article"
-												href="/questions/413/answers/1405/form">수정</a></li>
+												href="/questions/413/answers/1405/form">Update</a></li>
 											<li>
 												<form class="delete-answer-form"
 													action="/questions/413/answers/1405" method="POST">
 													<input type="hidden" name="_method" value="DELETE">
-													<button type="submit" class="delete-answer-button">삭제</button>
+													<button type="submit" class="delete-answer-button">Delete</button>
 												</form>
 											</li>
 										</ul>
@@ -119,12 +119,12 @@
 		<div class="article-util">
 		<ul class="article-util-list">
 			<li>
-				<a class="link-modify-article" href="/api/qna/updateAnswer/{3}">수정</a>
+				<a class="link-modify-article" href="/api/qna/updateAnswer/{3}"Update</a>
 			</li>
 			<li>
 				<form class="delete-answer-form" action="/api/questions/{3}/answers/{4}" method="POST">
 					<input type="hidden" name="_method" value="DELETE">
-                     <button type="submit" class="delete-answer-button">삭제/button>
+                     <button type="submit" class="delete-answer-button">Delete/button>
 				</form>
 			</li>
 		</ul>
