--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -72,7 +72,7 @@
 											<li><a class="link-modify-article"
 												href="/questions/413/answers/1405/form">Update</a></li>
 											<li>
-												<a class="link-Delete-article" href="/api/questions/{{id}}/answers">Delete</a>
+												<a class="link-Delete-article" href="/api/questions/{{question.id}}/answers/{{id}}">Delete</a>
 											</li>
 										</ul>
 									</div>
@@ -118,7 +118,7 @@
 				<a class="link-modify-article" href="/api/qna/updateAnswer/{3}">Modify</a>
 			</li>
 			<li>
-				<a class="link-Delete-article" href="/api/questions/{3}/answers">Delete</a>
+				<a class="link-Delete-article" href="/api/questions/{3}/answers/{4}">Delete</a>
 			</li>
 		</ul>
 		</div>
