index.html countOfCount

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
 									<a href="./user/profile.html" class="author">writer.userId</a>
 								</div>
 								<div class="reply" title="reply">
-									<i class="icon-reply"></i> <span class="point">{{countOfAnswer}}</span>
+									<i class="icon-reply"></i> <span class="point">countOfAnswer</span>
 								</div>
 							</div>
 						</div>
