--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,19 +5,27 @@
 
 <body>
 	{{> include/navigation}}
+	<div id="gallery_wrap">
+		<ul class="slide_gallery">
+			<li><img src="../images/myimage.png" alt="picture 1"></li>
+			<li><img src="../images/myimage.png" alt="picture 2"></li>
+			<li><img src="../images/myimage.png" alt="picture 3"></li>
+			<li><img src="../images/myimage.png" alt="picture 4"></li>
+		</ul>
+	</div>
 
 	<div class="container" id="main">
 		<div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
 			<div class="panel panel-default qna-list">
 				<ul class="list">
-				{{#questions}}
+					{{#questions}}
 					<li>
 						<div class="wrap">
 							<div class="main">
 								<strong class="subject"> <a href="/questions/{{id}}">{{title}}</a>
 								</strong>
 								<div class="auth-info">
-									<i class="icon-add-comment"></i> <span class="time">{{formattedCreateDate}}</span> 
+									<i class="icon-add-comment"></i> <span class="time">{{formattedCreateDate}}</span>
 									<a href="./user/profile.html" class="author">writer.userId</a>
 								</div>
 								<div class="reply" title="reply">
@@ -25,10 +33,9 @@
 								</div>
 							</div>
 						</div>
-					</li>
-				{{/questions}}
+					</li> {{/questions}}
 				</ul>
-				
+
 				<div class="row">
 					<div class="col-md-3"></div>
 					<div class="col-md-6 text-center">
