--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,10 +7,10 @@
 	{{> include/navigation}}
 	<div id="gallery_wrap">
 		<ul class="slide_gallery">
-			<li><img src="../images/myimage.png" alt="picture 1"></li>
-			<li><img src="../images/myimage.png" alt="picture 2"></li>
-			<li><img src="../images/myimage.png" alt="picture 3"></li>
-			<li><img src="../images/myimage.png" alt="picture 4"></li>
+			<li><img src="../images/main_pic1.jpg" alt="picture 1"></li>
+			<li><img src="../images/main_pic2.jpg" alt="picture 2"></li>
+			<li><img src="../images/main_pic3.jpg" alt="picture 3"></li>
+			<li><img src="../images/main_pic4.jpg" alt="picture 4"></li>
 		</ul>
 	</div>
 
