--- a/src/main/resources/templates/include/header.html
+++ b/src/main/resources/templates/include/header.html
@@ -4,5 +4,5 @@
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="/css/bootstrap.min.css" rel="stylesheet">
-<link href="/css/jquery.bxslider.min.css" rel="stylesheet">
+<link href="/css/jquery.bxslider.css" rel="stylesheet">
 <link href="/css/styles.css" rel="stylesheet">
