login validation check

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -21,7 +21,7 @@
 							class="form-control" id="password" name="password"
 							placeholder="Password">
 					</div>
-					<button type="submit" class="btn btn-success clearfix pull-right">Login</button>
+					<button type="submit" class="btn btn-success clearfix pull-right" onclick="loginValidate();">Login</button>
 					<div class="clearfix" />
 				</form>
 			</div>
