--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -70,7 +70,7 @@
 									<div class="article-util">
 										<ul class="article-util-list">
 											<li><a class="link-modify-article"
-												href="/api/questions/{{question.id}}/answers/{{id}}/form">Update</a></li>
+												href="/answers/{{question.id}}/answers/{{id}}/form">Update</a></li>
 											<li>
 												<a class="link-Delete-article" href="/api/questions/{{question.id}}/answers/{{id}}">Delete</a>
 											</li>
