profile.html arrangement

--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -14,16 +14,18 @@
 				<div class="panel-body">
 					<div class="well well-sm">
 						<div class="media">
-							<a class="thumbnail pull-left" href="#"> <img
-								class="media-object" src="../images/myimage.png">
+							<a class="thumbnail pull-center" href="#">
+							 <img class="media-object" src="../images/myimage.png">
 							</a>
-							<div class="media-body">
-								<h4 class="media-heading">JINHYUN NAM</h4>
-								<p>
-									<a href="#" class="btn btn-xs btn-default"><span
-										class="glyphicon glyphicon-envelope"></span>&nbsp;nice0001@gmail.com</a>
-								</p>
-							</div>
+						</div>
+						<div class="media-body">
+							<h4 class="media-heading">JINHYUN NAM</h4>
+							<p>
+							<a href="#" class="btn btn-xs btn-default"> 
+							<span class="glyphicon glyphicon-envelope"> 
+							</span>&nbsp;nice0001@gmail.com
+							</a>
+							</p>
 						</div>
 					</div>
 				</div>
