Add JinhyunController.java, jquery-ui.js, jquery-ui.css

--- a/src/main/resources/templates/include/header.html
+++ b/src/main/resources/templates/include/header.html
@@ -1,8 +1,9 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
-<title>JINHYUN Java Web Programming</title>
+<title>JINHYUN Spring Boot Alpha</title>
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="/css/bootstrap.min.css" rel="stylesheet">
 <link href="/css/jquery.bxslider.css" rel="stylesheet">
+<link href="/css/jquery-ui.css" rel="stylesheet">
 <link href="/css/styles.css" rel="stylesheet">
