--- a/src/main/resources/templates/include/footer.html
+++ b/src/main/resources/templates/include/footer.html
@@ -1,6 +1,7 @@
 	<!-- script references -->
 	<script src="/js/jquery-2.2.0.min.js"></script>
 	<script src="/js/jquery.bxslider.js"></script>
+	<script src="/js/jquery-ui.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/scripts.js"></script>
 	
