Add multiple Calendar

--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -39,7 +39,7 @@
             <ul class="nav dropdown-menu">
                 <li><a href="/jinhyun/profile"><i class="glyphicon glyphicon-user" style="color:#1111dd;"></i> Profile</a></li>
                 <li class="nav-divider"></li>
-                <li><a href="/users/profile"><i class="glyphicon glyphicon-user" style="color:#1111dd;"></i> Calendar</a></li>
+                <li><a href="/jinhyun/calendar"><i class="glyphicon glyphicon-user" style="color:#1111dd;"></i> Calendar</a></li>
                 <li class="nav-divider"></li>
                 <li><a href="#"><i class="glyphicon glyphicon-cog" style="color:#dd1111;"></i> Settings</a></li>
             </ul>
