--- a/src/main/resources/templates/jinhyun/calendar.html
+++ b/src/main/resources/templates/jinhyun/calendar.html
@@ -9,23 +9,12 @@
 		<div class="col-md-6 col-md-offset-3">
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h4>Profiles</h4>
+					<h4>Calendar</h4>
 				</div>
 				<div class="panel-body">
 					<div class="well well-sm">
-						<div class="media">
-							<a class="thumbnail pull-center" href="#">
-							 <img class="media-object" src="../images/myimage.png">
-							</a>
-						</div>
 						<div class="media-body">
-							<h4 class="media-heading">JINHYUN NAM</h4>
-							<p>
-							<a href="#" class="btn btn-xs btn-default"> 
-							<span class="glyphicon glyphicon-envelope"> 
-							</span>&nbsp;nice0001@gmail.com
-							</a>
-							</p>
+							<p>Date: <input type="text" id="datepicker"></p>
 						</div>
 					</div>
 				</div>
