--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,13 +42,13 @@
 					<div class="col-md-3"></div>
 					<div class="col-md-6 text-center">
 						<ul class="pagination center-block" style="display: inline-block;">
-							<li><a href="#">«</a></li>
+							<li class = "previous"><a href="?page=0">&larr; Newer Posts</a></li>
 							<li><a href="#">1</a></li>
 							<li><a href="#">2</a></li>
 							<li><a href="#">3</a></li>
 							<li><a href="#">4</a></li>
 							<li><a href="#">5</a></li>
-							<li><a href="#">»</a></li>
+							<li class = "next"><a href="?page=1">Older Posts &rarr;</a>
 						</ul>
 					</div>
 					<div class="col-md-3 qna-write">
