--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -36,6 +36,8 @@
 					</ul></li>
 				<li><a href="/users"><i class="glyphicon glyphicon-user"></i></a></li>
 			</ul>
+
+			
 		</div>
 	</div>
 </nav>
@@ -45,7 +47,7 @@
 			<a href="#" style="margin-left: 15px;"
 				class="navbar-btn btn btn-default btn-plus dropdown-toggle"
 				data-toggle="dropdown"><i class="glyphicon glyphicon-home"
-				style="color: #dd1111;"></i> Home <small><i
+				style="color: #dd1111;"></i> Who Am I <small><i
 					class="glyphicon glyphicon-chevron-down"></i></small></a>
 			<ul class="nav dropdown-menu">
 				<li><a href="/jinhyun/profile"><i
@@ -59,7 +61,6 @@
 				<li><a href="#"><i class="glyphicon glyphicon-cog"
 						style="color: #dd1111;"></i> Settings</a></li>
 			</ul>
-
 			<button type="button" class="navbar-toggle" data-toggle="collapse"
 				data-target="#navbar-collapse2">
 				<span class="sr-only">Toggle navigation</span> <span
@@ -77,9 +78,8 @@
 				<a href="/" data-toggle="tooltip" data-placement="top" title="Main Page">About</a>
 				</li> 
 				<li>
-				<a href="/users/loginForm" data-toggle="tooltip" data-placement="top" title="Can Log In">Recipes</a>
+				<a href="/" data-toggle="tooltip" data-placement="top" title="Can Log In">Recipes</a>
 				</li>
-
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 			 {{^sessionedUser}}
@@ -94,5 +94,6 @@
 						Update</a></li> {{/sessionedUser}}
 			</ul>
 		</div>
+		
 	</div>
 </div>
