--- a/src/main/resources/templates/include/footer.html
+++ b/src/main/resources/templates/include/footer.html
@@ -1,7 +1,16 @@
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 	<!-- script references -->
 	<script src="/js/jquery-2.2.0.min.js"></script>
 	<script src="/js/jquery.bxslider.js"></script>
 	<script src="/js/jquery-ui.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/scripts.js"></script>
+<footer th:fragment="mainFooter" class="container-fluid text-center">
+  <p>Copyright Jinhyun Nam</p>
+</footer>
+
+</html>
+
 	
