--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -77,7 +77,7 @@
 					title="Main Page">About</a></li>
 				<li><a href="/" data-toggle="tooltip" data-placement="top"
 					title="Can Log In">Recipes</a></li>
-				<li><a href="/" data-toggle="tooltip" data-placement="top"
+				<li><a href="/board" data-toggle="tooltip" data-placement="top"
 					title="Can Log In">Board</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
