--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -73,12 +73,12 @@
 				<li class="active">
 				<li><a href="/" data-toggle="tooltip" data-placement="top"
 					title="Main Page">Home</a></li>
-				<li><a href="/" data-toggle="tooltip" data-placement="top"
-					title="Main Page">About</a></li>
-				<li><a href="/" data-toggle="tooltip" data-placement="top"
-					title="Can Log In">Recipes</a></li>
+				<li><a href="/about" data-toggle="tooltip" data-placement="top"
+					title="About">About</a></li>
+				<li><a href="/recipes" data-toggle="tooltip" data-placement="top"
+					title="Recipes">Recipes</a></li>
 				<li><a href="/board" data-toggle="tooltip" data-placement="top"
-					title="Can Log In">Board</a></li>
+					title="Board">Board</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				{{^sessionedUser}}
