--- a/src/main/resources/templates/include/header.html
+++ b/src/main/resources/templates/include/header.html
@@ -7,3 +7,9 @@
 <link href="/css/jquery.bxslider.css" rel="stylesheet">
 <link href="/css/jquery-ui.css" rel="stylesheet">
 <link href="/css/styles.css" rel="stylesheet">
+<!-- script references -->
+<script src="/js/jquery-2.2.0.min.js"></script>
+<script src="/js/jquery.bxslider.js"></script>
+<script src="/js/jquery-ui.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/scripts.js"></script>
