--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,6 +54,6 @@
 			</div>
 		</div>
 	</div>
-<footer th:replace="./include/main_footer :: mainFooter"></footer>
+<footer th:replace="./include/footer :: mainFooter"></footer>
 </body>
 </html>
