--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -27,6 +27,6 @@
 			</div>
 		</div>
 	</div>
-	{{> include/footer}}
+<footer th:replace="./include/footer :: mainFooter"></footer>
 </body>
 </html>
