--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -26,7 +26,11 @@
 				</form>
 			</div>
 		</div>
+
+	{{> include/footer}}
+
 	</div>
-<footer th:replace="./include/footer :: mainFooter"></footer>
+
+	
 </body>
 </html>
