--- a/src/main/resources/templates/navigation/board.html
+++ b/src/main/resources/templates/navigation/board.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>{{> include/header}}
 </head>
 
@@ -10,6 +10,14 @@
 
 
 		<div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
+			<div id="gallery_wrap">
+				<ul class="slide_gallery">
+					<li><img src="../images/main_pic1.jpg" alt="picture 1"></li>
+					<li><img src="../images/main_pic2.jpg" alt="picture 2"></li>
+					<li><img src="../images/main_pic3.jpg" alt="picture 3"></li>
+					<li><img src="../images/main_pic4.jpg" alt="picture 4"></li>
+				</ul>
+			</div>
 			<div class="panel panel-default qna-list">
 				<ul class="list">
 					{{#questions}}
