--- a/src/main/resources/templates/navigation/about.html
+++ b/src/main/resources/templates/navigation/about.html
@@ -11,8 +11,7 @@
 	<h1 align="center"
 		style="line-height: 200.0%; background-color: #ffffff; margin-top: 12.0pt; text-align: center;">
 		<span
-			style="font-family: 'comic sans ms', sans-serif; font-size: 50.0px; color: #112987;">Welcome
-			to the Delicious Team</span>
+			style="font-family: 'comic sans ms', sans-serif; font-size: 50.0px; color: #112987;">Hi there</span>
 	</h1>
 </div>
 <div class="container-fluid"></div>
