--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -75,8 +75,8 @@
 					title="Main Page">Home</a></li>
 				<li><a href="/about" data-toggle="tooltip" data-placement="top"
 					title="About">About</a></li>
-				<li><a href="/recipes" data-toggle="tooltip" data-placement="top"
-					title="Recipes">Recipes</a></li>
+				<li><a href="/foodblog" data-toggle="tooltip" data-placement="top"
+					title="FoodBlog">FoodBlog</a></li>
 				<li><a href="/board" data-toggle="tooltip" data-placement="top"
 					title="Board">Board</a></li>
 			</ul>
