--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -103,10 +103,6 @@
 						blog </span> <br /> <br /> <br />
 					<div
 						style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-						<h3
-							style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-							<span class="label label-success">Michelle</span>
-						</h3>
 						<h4
 							style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
 							<span style="color: #4b66b3;"><span
@@ -138,13 +134,8 @@
 											<br />다. 김을 구워 칼로 잘게 썰어(하리노리) 사용하시오.
 										</ol>
 									</section>
-									<hr>
 							</span>
 						</h4>
-						<h3
-							style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
-							<span class="label label-primary">Jee</span>
-						</h3>
 						<h4
 							style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
 							<span style="color: #4b66b3;"><span
@@ -197,11 +188,29 @@
 									style="font-family: 'comic sans ms', sans-serif; text-decoration: blink;"><strong><span
 											style="font-family: 'trebuchet ms', geneva;"><span
 												style="font-family: 'comic sans ms', sans-serif;"><em></em></span></span></strong></span><span
-									style="font-family: 'comic sans ms', sans-serif;">I
-										graduated from university, and I worked for a public company.
-										After I got married, my life changed dramatically. I am living
-										so busy with my husband and children, my present life is
-										absolutely not quiet, and my family comes before me now.</span></span></span>
+									style="font-family: 'comic sans ms', sans-serif;"><section
+											id="no3">
+											<h1>전복버터구이(25분)</h1>
+											<ol>
+												<li>깻잎 : 찬물에 넣어두고 성형 : 다이아몬드 모양.</li>
+												<li>전복 : 소금으로 문질러서 씻은 후 껍질과 내장 분리 : 전복 껍질의 얇상한 쪽에서 숫가락을
+													넣어서 관자를 자름(잘못하면 내장 터지므로 절대 조심) 내장과 전복분리(분리시 이빨도 제거-내장 안터지게
+													주의)-> 내장 모래주머니 제거(간 모양의 두툼한)-> 전복의 관자쪽 세로로 길게 칼집 내고 가로로
+													어슷썰기.</li>
+												<li>양파, 피망 : 사방 2Cm 성형(전복 크기와 비슷하게).</li>
+												<li>은행 끓는 물에 데친후 껍질 제거.</li>
+												<li>후라이팬에 식용유 1t 두르고 양파 볶기 -> 전복, 청주, 은행 -> 피망, 내장, 버터,
+													소금, 후추 넣고 볶기(타지 않게 주의- 타면 많이 감점).</li>
+												<li>접시플레이팅 : 깻잎 10시 방향- 전복버터구이 가운데 담아 마무리.</li>
+												<br />
+												<br />
+												<h3>요구사항</h3>
+												<br />가. 전복은 껍질과 내장을 분리하고 칼집을 넣어 한입 크기로 어슷하게 써시오.
+												<br />나. 내장은 모래주머니를 제거하고 데쳐 사용하시오.
+												<br />다. 채소는 전복의 크기로 써시오.
+												<br />라. 은행은 속껍질을 벗겨 사용하시오.
+											</ol>
+										</section></span></span></span>
 						</h4>
 					</div>
 					<div
