--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -26,16 +26,10 @@
 					</h3>
 					<br />
 					<ul class="nav nav-pills nav-stacked">
-						<li class="active"><a href="#section1">About us</a></li>
-						<li><pre>Yesterday &amp; Today</pre></li>
-						<li><pre>Inspiration</pre></li>
-						<li><pre>Dream</pre></li>
-						<li><pre>Future</pre></li>
-						<li class="active"><a href="#section5">JongWon Baek Chef</a></li>
-						<li><pre>Who is he?</pre></li>
-						<li><pre>Why we choose him?</pre></li>
-						<li><pre>His value</pre></li>
-						<li><pre>What we will do?</pre></li>
+						<li class="active"><a href="#no">소고기 덮밥</a></li>
+						<li class="active"><a href="#no2">메밀국수(자루소바)</a></li>
+						<li class="active"><a href="#no3">전복버터구이</a></li>
+						<li class="active"><a href="#no4">달걀찜</a></li>
 					</ul>
 					                      <span
 						style="background-color: #d9534f; color: #ffffff; font-size: 18.0px; font-weight: bold; text-align: center; white-space: nowrap;"></span>
